updated for early 2014

--- a/citations.bib
+++ b/citations.bib
@@ -213,6 +213,19 @@
   doi={doi:10.1038/nmeth.2689},
 }
 
+@article{weinstein2013cancer,
+  title={The cancer genome atlas pan-cancer analysis project},
+  author={Weinstein, John N and Collisson, Eric A and Mills, Gordon B and Shaw, Kenna R Mills and Ozenberger, Brad A and Ellrott, Kyle and Shmulevich, Ilya and Sander, Chris and Stuart, Joshua M and Cancer Genome Atlas Research Network and others},
+  journal={Nature genetics},
+  volume={45},
+  number={10},
+  pages={1113--1120},
+  year={2013},
+  publisher={Nature Publishing Group},
+  url={http://www.nature.com/ng/journal/v45/n10/full/ng.2764.html},
+  doi={doi:10.1038/ng.2764}
+}
+
 @article{kandoth2013mutational,
   title={Mutational landscape and significance across 12 major cancer types},
   author={Kandoth, Cyriac and McLellan, Michael D and Vandin, Fabio and Ye, Kai and Niu, Beifang and Lu, Charles and Xie, Mingchao and Zhang, Qunyuan and McMichael, Joshua F and Wyczalkowski, Matthew A and others},
@@ -250,6 +263,19 @@
   doi={doi:10.1038/ncomms4156},
 }
   
+@article{russler2014r882h,
+  title={The R882H DNMT3A mutation associated with AML dominantly inhibits wild-type DNMT3A by blocking its ability to form active tetramers},
+  author={Russler-Germain, David A and Spencer, David H and Young, Margaret A and Lamprecht, Tamara L and Miller, Christopher A and Fulton, Robert and Meyer, Matthew R and Erdmann-Gilmore, Petra and Townsend, R Reid and Wilson, Richard K and others},
+  journal={Cancer cell},
+  volume={25},
+  number={4},
+  pages={442--454},
+  year={2014},
+  publisher={Elsevier},
+  url={http://www.cell.com/cancer-cell/abstract/S1535-6108(14)00078-6},
+  doi={doi:10.1016/j.ccr.2014.02.010}
+}
+
 @article{klco2014functional,
   title={Functional Heterogeneity of Genetically Defined Subclones in Acute Myeloid Leukemia},
   author={Klco, Jeffery M and Spencer, David H and Miller, Christopher A and Griffith, Malachi and Lamprecht, Tamara L and O’Laughlin, Michelle and Fronick, Catrina and Magrini, Vincent and Demeter, Ryan T and Fulton, Robert S and others},
