adding new pubs

--- a/citations.bib
+++ b/citations.bib
@@ -262,7 +262,7 @@
   url={http://www.nature.com/ncomms/2014/140122/ncomms4156/full/ncomms4156.html},
   doi={doi:10.1038/ncomms4156},
 }
-  
+
 @article{russler2014r882h,
   title={The R882H DNMT3A mutation associated with AML dominantly inhibits wild-type DNMT3A by blocking its ability to form active tetramers},
   author={Russler-Germain, David A and Spencer, David H and Young, Margaret A and Lamprecht, Tamara L and Miller, Christopher A and Fulton, Robert and Meyer, Matthew R and Erdmann-Gilmore, Petra and Townsend, R Reid and Wilson, Richard K and others},
@@ -286,5 +286,51 @@
   year={2014},
   publisher={Elsevier},
   url={http://www.cell.com/cancer-cell/fulltext/S1535-6108(14)00054-3},
-  doi={doi:10.1016/j.ccr.2014.01.031},
+  doi={doi:10.1016/j.ccr.2014.01.031}
+}
+
+@article{spencer2015epigenomic,
+  title={Epigenomic analysis of the HOX gene loci reveals mechanisms that may control canonical expression patterns in AML and normal hematopoietic cells},
+  author={Spencer, DH and Young, MA and Lamprecht, TL and Helton, NM and Fulton, R and O'Laughlin, M and Fronick, C and Magrini, V and Demeter, RT and Miller, CA and others},
+  journal={Leukemia},
+  year={2015},
+  publisher={Nature Publishing Group}
+  url={http://www.nature.com/leu/journal/v29/n6/full/leu20156a.html},
+  doi={doi:10.1038/leu.2015.6}
+}
+
+@article{li2015genetic,
+  title={Genetic Heterogeneity of Induced Pluripotent Stem Cells: Results from 24 Clones Derived from a Single C57BL/6 Mouse},
+  author={Li, Cheng and Klco, Jeffery M and Helton, Nichole M and George, Daniel R and Mudd, Jacqueline L and Miller, Christopher A and Lu, Charles and Fulton, Robert and O'Laughlin, Michelle and Fronick, Catrina and others},
+  journal={PloS one},
+  volume={10},
+  number={3},
+  year={2015},
+  publisher={Public Library of Science},
+  url={http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0120585},
+  doi={doi:10.1371/journal.pone.0120585},
+}
+
+@article{hirbe2015whole,
+  title={Whole exome sequencing reveals the order of genetic changes during malignant transformation and metastasis in a single patient with NF1-plexiform neurofibroma},
+  author={Hirbe, Angela and Dahiya, Sonika M and Miller, Christopher and Li, Tiandao and Fulton, Robert and Zhang, Xiaochun and McDonald, Sandra and DeSchryver, Katherine and Duncavage, Eric and Walrath, Jessica and others},
+  journal={Clinical Cancer Research},
+  pages={clincanres--3049},
+  year={2015},
+  publisher={American Association for Cancer Research},
+  url={http://clincancerres.aacrjournals.org/content/early/2015/04/29/1078-0432.CCR-14-3049.short},
+  doi={doi:10.1158/1078-0432.CCR-14-3049},
+}
+
+@article{griffith2015genome,
+  title={Genome Modeling System: A Knowledge Management Platform for Genomics},
+  author={Griffith, Malachi and Griffith, Obi L and Smith, Scott M and Ramu, Avinash and Callaway, Matthew B and Brummett, Anthony M and Kiwala, Michael J and Coffman, Adam C and Regier, Allison A and Oberkfell, Ben J and others},
+  journal={PLoS Comput Biol},
+  volume={11},
+  number={7},
+  pages={e1004274},
+  year={2015},
+  publisher={Public Library of Science},
+  url={http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004274},
+  doi={doi:10.1371/journal.pcbi.1004274},
 }
