--- a/citations.bib
+++ b/citations.bib
@@ -294,7 +294,7 @@
   author={Spencer, DH and Young, MA and Lamprecht, TL and Helton, NM and Fulton, R and O'Laughlin, M and Fronick, C and Magrini, V and Demeter, RT and Miller, CA and others},
   journal={Leukemia},
   year={2015},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group},
   url={http://www.nature.com/leu/journal/v29/n6/full/leu20156a.html},
   doi={doi:10.1038/leu.2015.6}
 }
