adding jama pub

--- a/citations.bib
+++ b/citations.bib
@@ -334,3 +334,16 @@
   url={http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1004274},
   doi={doi:10.1371/journal.pcbi.1004274},
 }
+
+@article{klco2015association,
+  title={Association Between Mutation Clearance After Induction Therapy and Outcomes in Acute Myeloid Leukemia},
+  author={Klco, Jeffery M and Miller, Christopher A and Griffith, Malachi and Petti, Allegra and Spencer, David H and Ketkar-Kulkarni, Shamika and Wartman, Lukas D and Christopher, Matthew and Lamprecht, Tamara L and Helton, Nicole M and others},
+  journal={JAMA},
+  volume={314},
+  number={8},
+  pages={811--822},
+  year={2015},
+  publisher={American Medical Association},
+  url={https://jama.jamanetwork.com/article.aspx?articleid=2429715},
+  doi={doi:10.1001/jama.2015.9643},
+}
