adding pubs, adding shared authorship labels

--- a/citations.bib
+++ b/citations.bib
@@ -191,7 +191,7 @@
 }
 
 @article{li2013endocrine,
-  title={Endocrine-Therapy-Resistant< i> ESR1</i> Variants Revealed by Genomic Characterization of Breast-Cancer-Derived Xenografts},
+  title={Endocrine-Therapy-Resistant <i>ESR1</i> Variants Revealed by Genomic Characterization of Breast-Cancer-Derived Xenografts},
   author={Li, Shunqiang and Shen, Dong and Shao, Jieya and Crowder, Robert and Liu, Wenbin and Prat, Aleix and He, Xiaping and Liu, Shuying and Hoog, Jeremy and Lu, Charles and others},
   journal={Cell reports},
   volume={4},
@@ -250,6 +250,20 @@
   publisher={MASSACHUSETTS MEDICAL SOC WALTHAM WOODS CENTER, 860 WINTER ST,, WALTHAM, MA 02451-1413 USA},
   url={http://www.nejm.org/doi/full/10.1056/NEJMc1308782},
   doi={doi:10.1056/NEJMc1308782},
+}
+
+@article{miller2014sciclone,
+  title={SciClone: inferring clonal architecture and tracking the spatial and temporal patterns of tumor evolution},
+  author={Miller, Christopher A* and White, Brian S* and Dees, Nathan D and Griffith, Malachi and Welch, John S and Griffith, Obi L and Vij, Ravi and Tomasson, Michael H and Graubert, Timothy A and Walter, Matthew J and others},
+  journal={PLoS Comput Biol},
+  volume={10},
+  number={8},
+  pages={e1003665},
+  year={2014},
+  publisher={Public Library of Science},
+  url={http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003665},
+  doi={doi:10.1371/journal.pcbi.1003665},
+  pmid={25102416}
 }
 
 @article{kanchi2014integrated,
@@ -337,7 +351,7 @@
 
 @article{klco2015association,
   title={Association Between Mutation Clearance After Induction Therapy and Outcomes in Acute Myeloid Leukemia},
-  author={Klco, Jeffery M and Miller, Christopher A and Griffith, Malachi and Petti, Allegra and Spencer, David H and Ketkar-Kulkarni, Shamika and Wartman, Lukas D and Christopher, Matthew and Lamprecht, Tamara L and Helton, Nicole M and others},
+  author={Klco, Jeffery M* and Miller, Christopher A* and Griffith, Malachi and Petti, Allegra and Spencer, David H and Ketkar-Kulkarni, Shamika and Wartman, Lukas D and Christopher, Matthew and Lamprecht, Tamara L and Helton, Nicole M and others},
   journal={JAMA},
   volume={314},
   number={8},
@@ -346,4 +360,19 @@
   publisher={American Medical Association},
   url={https://jama.jamanetwork.com/article.aspx?articleid=2429715},
   doi={doi:10.1001/jama.2015.9643},
+  cofirst={true},
+}
+
+@article{griffith2015optimizing,
+  title={Optimizing Cancer Genome Sequencing and Analysis},
+  author={Griffith, Malachi* and Miller, Christopher A* and Griffith, Obi L and Krysiak, Kilannin and Skidmore, Zachary L and Ramu, Avinash and Walker, Jason R and Dang, Ha X and Trani, Lee and Larson, David E and others},
+  journal={Cell Systems},
+  volume={1},
+  number={3},
+  pages={210--223},
+  year={2015},
+  publisher={Cell Press},
+  url={http://www.cell.com/cell-systems/abstract/S2405-4712(15)00113-1},
+  doi={doi:10.1016/j.cels.2015.08.015},
+  cofirst={true},
 }
