adding new citations

--- a/citations.bib
+++ b/citations.bib
@@ -376,3 +376,108 @@
   doi={doi:10.1016/j.cels.2015.08.015},
   cofirst={true},
 }
+
+@article{churpek2015genomic,
+  title={Genomic analysis of germ line and somatic variants in familial myelodysplasia/acute myeloid leukemia},
+  author={Churpek, Jane E and Pyrtel, Khateriaa and Kanchi, Krishna-Latha and Shao, Jin and Koboldt, Daniel and Miller, Christopher A and Shen, Dong and Fulton, Robert and O’Laughlin, Michelle and Fronick, Catrina and others},
+  journal={Blood},
+  volume={126},
+  number={22},
+  pages={2484--2490},
+  year={2015},
+  publisher={American Society of Hematology},
+  url={http://www.bloodjournal.org/content/126/22/2484.full},
+  doi={doi:10.1182/blood-2015-04-641100}
+}
+
+@article{wong2016rapid,
+  title={Rapid expansion of preexisting nonleukemic hematopoietic clones frequently follows induction therapy for de novo AML},
+  author={Wong, Terrence N and Miller, Christopher A and Klco, Jeffery M and Petti, Allegra and Demeter, Ryan and Helton, Nichole M and Li, Tiandao and Fulton, Robert S and Heath, Sharon E and Mardis, Elaine R and others},
+  journal={Blood},
+  volume={127},
+  number={7},
+  pages={893--897},
+  year={2016},
+  publisher={American Society of Hematology},
+  url={http://www.bloodjournal.org/content/127/7/893.full?sso-checked=true},
+  doi={doi:10.1182/blood-2015-10-677021}
+}
+
+@article{lu2015patterns,
+  title={Patterns and functional implications of rare germline variants across 12 cancer types},
+  author={Lu, Charles and Xie, Mingchao and Wendl, Michael C and Wang, Jiayin and McLellan, Michael D and Leiserson, Mark DM and Huang, Kuan-lin and Wyczalkowski, Matthew A and Jayasinghe, Reyka and Banerjee, Tapahsama and others},
+  journal={Nature communications},
+  volume={6},
+  year={2015},
+  publisher={Nature Publishing Group},
+  url={http://www.nature.com/ncomms/2015/151209/ncomms10086/full/ncomms10086.html},
+  doi={doi:10.1038/ncomms10086}
+}
+
+@article{krysiak2016genomic,
+  title={A genomic analysis of Philadelphia chromosome-negative AML arising in patients with CML},
+  author={Krysiak, K and Christopher, MJ and Skidmore, ZL and Demeter, RT and Magrini, V and Kunisaki, J and O'laughlin, M and Duncavage, EJ and Miller, CA and Ozenberger, BA and others},
+  journal={Blood cancer journal},
+  volume={6},
+  number={4},
+  pages={e413},
+  year={2016},
+  publisher={Nature Publishing Group},
+  url={http://www.nature.com/bcj/journal/v6/n4/full/bcj201618a.html},
+  doi={doi:10.1038/bcj.2016.18}
+}
+
+@article{lu2016common,
+  title={A common founding clone with TP53 and PTEN mutations gives rise to a concurrent germ cell tumor and acute megakaryoblastic leukemia},
+  author={Lu, Charles and Riedell, Peter and Miller, Christopher A and Hagemann, Ian S and Westervelt, Peter and Ozenberger, Bradley A and O'Laughlin, Michelle and Magrini, Vincent and Demeter, Ryan T and Duncavage, Eric J and others},
+  journal={Molecular Case Studies},
+  volume={2},
+  number={1},
+  pages={a000687},
+  year={2016},
+  publisher={Cold Spring Harbor Laboratory Press},
+  url={http://molecularcasestudies.cshlp.org/content/2/1/a000687.short},
+  doi={doi:10.1101/mcs.a000687}
+}
+
+@article{purkait2016atrx,
+  title={ATRX in diffuse gliomas with its mosaic/heterogeneous expression in a subset},
+  author={Purkait, Suvendu and Miller, Christopher A and Kumar, Anupam and Sharma, Vikas and Pathak, Pankaj and Jha, Prerana and Sharma, Mehar Chand and Suri, Vaishali and Suri, Ashish and Sharma, BS and others},
+  journal={Brain Pathology},
+  year={2016},
+  publisher={Wiley Online Library},
+  url={http://onlinelibrary.wiley.com/doi/10.1111/bpa.12364/abstract},
+  doi={doi:10.1111/bpa.12364}
+}
+
+@article{griffith2016comprehensive,
+  title={Comprehensive genomic analysis reveals FLT3 activation and a therapeutic strategy for a patient with relapsed adult B-lymphoblastic leukemia},
+  author={Griffith, Malachi and Griffith, Obi L and Krysiak, Kilannin and Skidmore, Zachary L and Christopher, Matthew J and Klco, Jeffery M and Ramu, Avinash and Lamprecht, Tamara L and Wagner, Alex H and Campbell, Katie M and others},
+  journal={Experimental hematology},
+  year={2016},
+  publisher={Elsevier},
+  url={http://www.sciencedirect.com/science/article/pii/S0301472X16301151},
+  doi={doi:10.1016/j.exphem.2016.04.011}
+}
+
+@article{miller2016visualizing,
+  title={Visualizing tumor evolution with the fishplot package for R},
+  author={Miller, Christopher A and McMichael, Joshua and Dang, Ha X and Maher, Christopher A and Ding, Li and Ley, Timothy J and Mardis, Elaine R and Wilson, Richard K},
+  journal={bioRxiv},
+  pages={059055},
+  year={2016},
+  publisher={Cold Spring Harbor Labs Journals},
+  url={http://biorxiv.org/content/early/2016/06/15/059055},
+  doi={doi:10.1101/059055}
+}
+
+@article{miller2016aromatase,
+  title={Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers},
+  author={Miller, Christopher A and Gindin, Yevgeniy and Lu, Charles and Griffith, Obi L and Griffith, Malachi and Shen, Dong and Hoog, Jeremy and Li, Tiandao and Larson, David E and Watson, Mark and others},
+  journal={Nature Communications},
+  volume={7},
+  year={2016},
+  publisher={Nature Research},
+  url={http://www.nature.com/articles/ncomms12498},
+  doi={doi:10.1038/ncomms12498}
+}
