--- a/citations.bib
+++ b/citations.bib
@@ -460,17 +460,6 @@
   doi={doi:10.1016/j.exphem.2016.04.011}
 }
 
-@article{miller2016visualizing,
-  title={Visualizing tumor evolution with the fishplot package for R},
-  author={Miller, Christopher A and McMichael, Joshua and Dang, Ha X and Maher, Christopher A and Ding, Li and Ley, Timothy J and Mardis, Elaine R and Wilson, Richard K},
-  journal={bioRxiv},
-  pages={059055},
-  year={2016},
-  publisher={Cold Spring Harbor Labs Journals},
-  url={http://biorxiv.org/content/early/2016/06/15/059055},
-  doi={doi:10.1101/059055}
-}
-
 @article{miller2016aromatase,
   title={Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers},
   author={Miller, Christopher A and Gindin, Yevgeniy and Lu, Charles and Griffith, Obi L and Griffith, Malachi and Shen, Dong and Hoog, Jeremy and Li, Tiandao and Larson, David E and Watson, Mark and others},
@@ -480,4 +469,53 @@
   publisher={Nature Research},
   url={http://www.nature.com/articles/ncomms12498},
   doi={doi:10.1038/ncomms12498}
+}
+
+@article{duncavage2016targeted,
+  title={Targeted sequencing informs the evaluation of normal karyotype cytopenic patients for low-grade myelodysplastic syndrome},
+  author={Duncavage, EJ and O'Brien, J and Vij, K and Miller, CA and Chang, GS and Shao, J and Jacoby, MA and Heath, S and Janke, MR and Elliott, K and others},
+  journal={Leukemia},
+  year={2016},
+  publisher={Nature Publishing Group},
+  url={http://www.nature.com/leu/journal/vaop/ncurrent/full/leu2016247a.html},
+  doi={doi:10.1038/leu.2016.247}
+}
+
+@article{griffith2016truncating,
+  title={Truncating Prolactin Receptor Mutations Promote Tumor Growth in Murine Estrogen Receptor-Alpha Mammary Carcinomas},
+  author={Griffith, Obi L and Chan, Szeman Ruby and Griffith, Malachi and Krysiak, Kilannin and Skidmore, Zachary L and Hundal, Jasreet and Allen, Julie A and Arthur, Cora D and Runci, Daniele and Bugatti, Mattia and others},
+  journal={Cell Reports},
+  volume={17},
+  number={1},
+  pages={249--260},
+  year={2016},
+  publisher={Elsevier},
+  url={http://www.cell.com/cell-reports/abstract/S2211-1247(16)31172-X},
+  doi={doi:10.1016/j.celrep.2016.08.076}
+}
+
+@article{johanns2016immunogenomics,
+  title={Immunogenomics of Hypermutated Glioblastoma: A Patient with Germline POLE Deficiency Treated with Checkpoint Blockade Immunotherapy},
+  author={Johanns, Tanner M and Miller, Christopher A and Dorward, Ian G and Tsien, Christina and Chang, Edward and Perry, Arie and Uppaluri, Ravindra and Ferguson, Cole and Schmidt, Robert E and Dahiya, Sonika and others},
+  journal={Cancer Discovery},
+  volume={6},
+  number={11},
+  pages={1230--1236},
+  year={2016},
+  publisher={AACR},
+  url={http://cancerdiscovery.aacrjournals.org/content/early/2016/10/18/2159-8290.CD-16-0575},
+  doi={doi:10.1158/2159-8290.CD-16-0575},
+  cofirst={true},
+}
+
+@article{miller2016visualising,
+	title={Visualizing tumor evolution with the fishplot package for R},
+	author={Miller, Christopher A. and McMichael, Joshua and Dang, Ha X. and Maher, Christopher A. and Ding, Li and Ley, Timothy J. and Mardis, Elaine R. and Wilson, Richard K.},
+	journal={BMC Genomics},
+	year={2016},
+	volume={17},
+	number={1},
+	pages={880},
+	doi={10.1186/s12864-016-3195-z},
+	url={https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-016-3195-z}
 }
