--- a/citations.bib
+++ b/citations.bib
@@ -496,7 +496,7 @@
 
 @article{johanns2016immunogenomics,
   title={Immunogenomics of Hypermutated Glioblastoma: A Patient with Germline POLE Deficiency Treated with Checkpoint Blockade Immunotherapy},
-  author={Johanns, Tanner M and Miller, Christopher A and Dorward, Ian G and Tsien, Christina and Chang, Edward and Perry, Arie and Uppaluri, Ravindra and Ferguson, Cole and Schmidt, Robert E and Dahiya, Sonika and others},
+  author={Johanns, Tanner M* and Miller, Christopher A* and Dorward, Ian G and Tsien, Christina and Chang, Edward and Perry, Arie and Uppaluri, Ravindra and Ferguson, Cole and Schmidt, Robert E and Dahiya, Sonika and others},
   journal={Cancer Discovery},
   volume={6},
   number={11},
