--- a/citations.bib
+++ b/citations.bib
@@ -530,5 +530,40 @@
   year={2016},
   publisher={Massachusetts Medical Society},
   doi={doi:10.1056/NEJMoa1605949},
-  url={http://www.nejm.org/doi/full/10.1056/NEJMoa1605949},
+  url={http://www.nejm.org/doi/full/10.1056/NEJMoa1605949}
 }
+
+@article{johanns2016endogenous,
+  title={Endogenous Neoantigen-Specific CD8 T Cells Identified in Two Glioblastoma Models Using a Cancer Immunogenomics Approach},
+  author={Johanns, Tanner M and Ward, Jeffrey P and Miller, Christopher A and Wilson, Courtney and Kobayashi, Dale K and Bender, Diane and Fu, Yujie and Alexandrov, Anton and Mardis, Elaine R and Artyomov, Maxim N and others},
+  journal={Cancer Immunology Research},
+  volume={4},
+  number={12},
+  pages={1007--1015},
+  year={2016},
+  publisher={American Association for Cancer Research},
+  doi={doi:10.1158/2326-6066},
+  url={http://cancerimmunolres.aacrjournals.org/content/4/12/1007}
+ }
+
+@article{hoadley2016tumor,
+  title={Tumor Evolution in Two Patients with Basal-like Breast Cancer: A Retrospective Genomics Study of Multiple Metastases},
+  author={Hoadley, Katherine A and Siegel, Marni B and Kanchi, Krishna L and Miller, Christopher A and Ding, Li and Zhao, Wei and He, Xiaping and Parker, Joel S and Wendl, Michael C and Fulton, Robert S and others},
+  journal={PLoS medicine},
+  volume={13},
+  number={12},
+  pages={e1002174},
+  year={2016},
+  publisher={Public Library of Science},
+  doi={doi:10.1371/journal.pmed.1002174},
+  url={http://journals.plos.org/plosmedicine/article?id=10.1371/journal.pmed.1002174}
+}
+
+@article{duncavage2017mutational,
+  title={Mutational landscape and response are conserved in peripheral blood of AML and MDS patients during decitabine therapy.},
+  author={Duncavage, Eric J and Uy, Geoffrey L and Petti, Allegra A and Miller, Christopher A and Lee, Yi-Shan and Tandon, Bevan and Gao, Feng and Fronick, Catrina C and O'Laughlin, Michelle and Fulton, Robert S and others},
+  journal={Blood},
+  year={2017},
+  doi={doi:10.1182/blood-2016-10-745273},
+  url={http://www.bloodjournal.org/content/early/2017/01/12/blood-2016-10-745273.long}
+ }
