adding course and citation

--- a/citations.bib
+++ b/citations.bib
@@ -567,3 +567,15 @@
   doi={doi:10.1182/blood-2016-10-745273},
   url={http://www.bloodjournal.org/content/early/2017/01/12/blood-2016-10-745273.long}
  }
+
+
+@article {Miller115923,
+  title={Temporal and Clonal Progression in a Pediatric Ependymoma Patient Through Multiple Treatments},
+  author={Miller, Christopher A and Dahiya, Sonika and Li, Tiandao and Fulton, Robert and Smyth, Matthew D and Dunn, Gavin P and Rubin, Joshua B and Mardis, Elaine R},
+  journal = {bioRxiv},
+  year={2017},
+  publisher={Cold Spring Harbor Labs Journals},
+  doi={10.1101/115923},
+  url={http://biorxiv.org/content/early/2017/03/11/115923}
+}
+
