--- a/citations.bib
+++ b/citations.bib
@@ -579,3 +579,28 @@
   url={http://biorxiv.org/content/early/2017/03/11/115923}
 }
 
+@article{uy2017dynamic,
+  title={Dynamic changes in the clonal structure of MDS and AML in response to epigenetic therapy},
+  author={Uy, Geoffrey L and Duncavage, Eric J and Chang, Gue Su and Jacoby, Meagan A and Miller, Christopher A and Shao, Jin and Heath, Sharon and Elliott, Kevin and Reinick, Teresa and Fulton, Robert S and others},
+  journal={Leukemia},
+  volume={31},
+  number={4},
+  pages={872},
+  year={2016},
+  publisher={},
+  doi={doi:10.1038/leu.2016.282},
+  url={https://www.nature.com/leu/journal/v31/n4/full/leu2016282a.html}
+}
+
+@article{krysiak2017recurrent,
+  title={Recurrent somatic mutations affecting B-cell receptor signaling pathway genes in follicular lymphoma},
+  author={Krysiak, Kilannin and Gomez, Felicia and White, Brian S and Matlock, Matthew and Miller, Christopher A and Trani, Lee and Fronick, Catrina C and Fulton, Robert S and Kreisel, Friederike and Cashen, Amanda F and others},
+  journal={Blood},
+  volume={129},
+  number={4},
+  pages={473--483},
+  year={2017},
+  publisher={American Society of Hematology},
+  doi={doi:10.1182/blood-2016-07-729954},
+  url={http://www.bloodjournal.org/content/129/4/473}
+}
