--- a/citations.bib
+++ b/citations.bib
@@ -604,3 +604,50 @@
   doi={doi:10.1182/blood-2016-07-729954},
   url={http://www.bloodjournal.org/content/129/4/473}
 }
+
+@article{zhang2017comprehensive,
+  title={Comprehensive discovery of noncoding RNAs in acute myeloid leukemia cell transcriptomes},
+  author={Zhang, Jin and Griffith, Malachi and Miller, Christopher A and Griffith, Obi L and Spencer, David H and Walker, Jason R and Magrini, Vincent and McGrath, Sean D and Ly, Amy and Helton, Nichole M and others},
+  journal={Experimental Hematology},
+  volume={55},
+  pages={19--33},
+  year={2017},
+  publisher={Elsevier},
+  doi={doi:10.1016/j.exphem.2017.07.008},
+  url={https://www.sciencedirect.com/science/article/pii/S0301472X17307014}
+}
+
+@article{cole2017haploinsufficiency,
+  title={Haploinsufficiency for DNA methyltransferase 3A predisposes hematopoietic cells to myeloid malignancies},
+  author={Cole, Christopher B and Russler-Germain, David A and Ketkar, Shamika and Verdoni, Angela M and Smith, Amanda M and Bangert, Celia V and Helton, Nichole M and Guo, Mindy and Klco, Jeffery M and O’Laughlin, Shelly and others},
+  journal={The Journal of Clinical Investigation},
+  volume={127},
+  number={10},
+  pages={3657--3674},
+  year={2017},
+  publisher={American Society for Clinical Investigation},
+  doi={doi:10.1172/JCI93041},
+  url={https://www.jci.org/articles/view/93041}
+}
+
+@article{dang2017clonevol,
+  title={ClonEvol: clonal ordering and visualization in cancer sequencing},
+  author={Dang, HX and White, BS and Foltz, SM and Miller, CA and Luo, J and Fields, RC and Maher, CA},
+  journal={Annals of Oncology},
+  year={2017},
+  doi={doi:10.1093/annonc/mdx517},
+  url={https://academic.oup.com/annonc/advance-article-abstract/doi/10.1093/annonc/mdx517/4110375?redirectedFrom=fulltext}
+}
+
+@article{cancer2017comprehensive,
+  title={Comprehensive and Integrated Genomic Characterization of Adult Soft Tissue Sarcomas},
+  author={Cancer Genome Atlas Research Network and others},
+  journal={Cell},
+  volume={171},
+  number={4},
+  pages={950--965},
+  year={2017},
+  publisher={Cell Press},
+  doi={doi:10.1016/j.cell.2017.10.014},
+  url={http://www.sciencedirect.com/science/article/pii/S0092867417312035}
+}
