--- a/citations.bib
+++ b/citations.bib
@@ -568,17 +568,6 @@
   url={http://www.bloodjournal.org/content/early/2017/01/12/blood-2016-10-745273.long}
  }
 
-
-@article {Miller115923,
-  title={Temporal and Clonal Progression in a Pediatric Ependymoma Patient Through Multiple Treatments},
-  author={Miller, Christopher A and Dahiya, Sonika and Li, Tiandao and Fulton, Robert and Smyth, Matthew D and Dunn, Gavin P and Rubin, Joshua B and Mardis, Elaine R},
-  journal = {bioRxiv},
-  year={2017},
-  publisher={Cold Spring Harbor Labs Journals},
-  doi={10.1101/115923},
-  url={http://biorxiv.org/content/early/2017/03/11/115923}
-}
-
 @article{uy2017dynamic,
   title={Dynamic changes in the clonal structure of MDS and AML in response to epigenetic therapy},
   author={Uy, Geoffrey L and Duncavage, Eric J and Chang, Gue Su and Jacoby, Meagan A and Miller, Christopher A and Shao, Jin and Heath, Sharon and Elliott, Kevin and Reinick, Teresa and Fulton, Robert S and others},
@@ -639,8 +628,19 @@
   url={https://academic.oup.com/annonc/advance-article-abstract/doi/10.1093/annonc/mdx517/4110375?redirectedFrom=fulltext}
 }
 
+@article{xia2017somatic,
+  title={Somatic mutations and clonal hematopoiesis in congenital neutropenia},
+  author={Xia, Jun and Miller, Christopher A and Baty, Jack and Ramesh, Amrita and Jotte, Matthew RM and Fulton, Robert S and Vogel, Tiphanie P and Cooper, Megan A and Walkovich, Kelly J and Makaryan, Vahagn and others},
+  journal={Blood},
+  pages={blood--2017},
+  year={2017},
+  publisher={American Society of Hematology},
+  doi={doi:10.1182/blood-2017-08-801985},
+  url={http://www.bloodjournal.org/content/131/4/408.long}
+}
+
 @article{cancer2017comprehensive,
-  title={Comprehensive and Integrated Genomic Characterization of Adult Soft Tissue Sarcomas},
+  title={Comprehensive and integrated genomic characterization of adult soft tissue sarcomas},
   author={Cancer Genome Atlas Research Network and others},
   journal={Cell},
   volume={171},
@@ -649,5 +649,100 @@
   year={2017},
   publisher={Cell Press},
   doi={doi:10.1016/j.cell.2017.10.014},
-  url={http://www.sciencedirect.com/science/article/pii/S0092867417312035}
+  url={https://www.sciencedirect.com/science/article/pii/S0092867417312035}
+}
+
+@article{grigsby2018clinical,
+  title={Clinical outcomes and differential effects of PI3K pathway mutation in obese versus non-obese patients with cervical cancer},
+  author={Grigsby, Perry and Elhammali, Adnan and Ruiz, Fiona and Markovina, Stephanie and McLellan, Michael D and Miller, Christopher A and Chundury, Anupama and Ta, Ngoc-Anh L and Rashmi, Ramachandran and Pfeifer, John D and others},
+  journal={Oncotarget},
+  volume={9},
+  number={3},
+  pages={4061},
+  year={2018},
+  publisher={Impact Journals, LLC},
+  doi={doi: 10.18632/oncotarget.23664},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5790521/}
+}
+
+@article{wong2018cellular,
+  title={Cellular stressors contribute to the expansion of hematopoietic clones of varying leukemic potential},
+  author={Wong, Terrence N and Miller, Christopher A and Jotte, Matthew RM and Bagegni, Nusayba and Baty, Jack D and Schmidt, Amy P and Cashen, Amanda F and Duncavage, Eric J and Helton, Nichole M and Fiala, Mark and others},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={455},
+  year={2018},
+  publisher={Nature Publishing Group},
+  doi={doi:10.1038/s41467-018-02858-0},
+  url={https://www.nature.com/articles/s41467-018-02858-0}
+}
+
+@article{mahlokozera2017biological,
+  title={Biological and therapeutic implications of multisector sequencing in newly diagnosed glioblastomas},
+  author={Mahlokozera, Tatenda and Vellimana, Ananth K and Li, Tiandao and Mao, Diane D and Zohny, Zohny S and Kim, David H and Tran, David D and Marcus, Daniel S and Fouke, Sarah J and Campian, Jian L and others},
+  journal={Neuro-oncology},
+  year={2017},
+  doi={doi:10.1093/neuonc/nox232},
+  url={https://academic.oup.com/neuro-oncology/article/20/4/472/4737220}
+}
+
+@article{bansal2018lenalidomide,
+  title={Lenalidomide results in a durable complete remission in acute myeloid leukemia accompanied by persistence of somatic mutations and a T-cell infiltrate in the bone marrow},
+  author={Bansal, Dhruv and Vij, Kiran and Chang, Gue Su and Miller, Christopher A and DiPersio, John F and Vij, Ravi and Heath, Sharon E and Westervelt, Peter and Welch, John S and Fehniger, Todd A},
+  journal={Haematologica},
+  volume={103},
+  number={6},
+  pages={e270--e273},
+  year={2018},
+  publisher={Haematologica},
+  doi={doi:10.3324/haematol.2017.184168},
+  url={http://www.haematologica.org/content/103/6/e270}
+}
+
+@article{griffith2017prognostic,
+  title={The prognostic effects of somatic mutations in ER-positive breast cancer},
+  author={Griffith, Obi L and Spies, Nicholas C and Anurag, Meenakshi and Griffith, Malachi and Luo, Jingqin and Tu, Dongsheng and Yeo, Belinda and Kunisaki, Jason and Miller, Christopher A and Krysiak, Kilannin and others},
+  journal={bioRxiv},
+  pages={235846},
+  year={2017},
+  publisher={Cold Spring Harbor Laboratory},
+  doi={doi:10.1101/235846},
+  url={https://www.biorxiv.org/content/early/2017/12/19/235846}
+}
+
+@article{miller2018resistance,
+  title={Resistance-promoting effects of ependymoma treatment revealed through genomic analysis of multiple recurrences in a single patient},
+  author={Miller, Christopher A and Dahiya, Sonika and Li, Tiandao and Fulton, Robert S and Smyth, Matthew D and Dunn, Gavin P and Rubin, Joshua B and Mardis, Elaine R},
+  journal={Molecular Case Studies},
+  volume={4},
+  number={2},
+  pages={a002444},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory Press},
+  doi={doi:10.1101/mcs.a002444},
+  url={http://molecularcasestudies.cshlp.org/content/4/2/a002444.short}
+}
+
+@article{cooper2018off,
+  title={An “off-the-shelf” fratricide-resistant CAR-T for the treatment of T cell hematologic malignancies},
+  author={Cooper, Matthew L and Choi, Jaebok and Staser, Karl and Ritchey, Julie K and Devenport, Jessica M and Eckardt, Kayla and Rettig, Michael P and Wang, Bing and Eissenberg, Linda G and Ghobadi, Armin and others},
+  journal={Leukemia},
+  pages={1},
+  year={2018},
+  publisher={Nature Publishing Group},
+  doi={doi:10.1038/s41375-018-0065-5},
+  url={https://www.nature.com/articles/s41375-018-0065-5}
+}
+
+@article{rohan2018somatic,
+  title={Somatic mutations in benign breast disease tissue and risk of subsequent invasive breast cancer},
+  author={Rohan, Thomas E and Miller, Christopher A and Li, Tiandao and Wang, Yihong and Loudig, Olivier and Ginsberg, Mindy and Glass, Andrew and Mardis, Elaine},
+  journal={British journal of cancer},
+  pages={1},
+  year={2018},
+  publisher={Nature Publishing Group},
+  doi={doi:10.1038/s41416-018-0089-7},
+  url={https://www.nature.com/articles/s41416-018-0089-7},
+  cofirst={true},
 }
