--- a/citations.bib
+++ b/citations.bib
@@ -744,5 +744,27 @@
   publisher={Nature Publishing Group},
   doi={doi:10.1038/s41416-018-0089-7},
   url={https://www.nature.com/articles/s41416-018-0089-7},
-  cofirst={true},
+  cofirst={true}
+}
+
+@article{miller2018case,
+  title={A case of acute myeloid leukemia with promyelocytic features characterized by expression of a novel RARG-CPSF6 fusion},
+  author={Miller, Christopher A and Tricarico, Christopher and Skidmore, Zachary L and Uy, Geoffrey L and Lee, Yi-Shan and Hassan, Anjum and O’Laughlin, Michelle D and Schmidt, Heather and Tian, Ling and Duncavage, Eric J and others},
+  journal={Blood advances},
+  volume={2},
+  number={11},
+  pages={1295--1299},
+  year={2018},
+  publisher={American Society of Hematology}
+  doi={doi:10.1182/bloodadvances.2017014183},
+  url={http://www.bloodadvances.org/content/2/11/1295}
+}
+
+@article{alberti2018discriminating,
+  title={Discriminating a common somatic ASXL1 mutation (c. 1934dup; p. G646Wfs* 12) from artifact in myeloid malignancies using NGS.},
+  author={Alberti, Michael O and Srivatsan, Sridhar Nonavinkere and Shao, Jin and McNulty, Samantha N and Chang, Gue Su and Miller, Christopher A and Dunlap, Jennifer B and Yang, Fei and Press, Richard D and Gao, Qingsong and others},
+  journal={Leukemia},
+  year={2018}
+  doi={doi:10.1038/s41375-018-0193-y},
+  url={https://www.nature.com/articles/s41375-018-0193-y}
 }
