--- a/citations.bib
+++ b/citations.bib
@@ -755,7 +755,7 @@
   number={11},
   pages={1295--1299},
   year={2018},
-  publisher={American Society of Hematology}
+  publisher={American Society of Hematology},
   doi={doi:10.1182/bloodadvances.2017014183},
   url={http://www.bloodadvances.org/content/2/11/1295}
 }
@@ -764,7 +764,7 @@
   title={Discriminating a common somatic ASXL1 mutation (c. 1934dup; p. G646Wfs* 12) from artifact in myeloid malignancies using NGS.},
   author={Alberti, Michael O and Srivatsan, Sridhar Nonavinkere and Shao, Jin and McNulty, Samantha N and Chang, Gue Su and Miller, Christopher A and Dunlap, Jennifer B and Yang, Fei and Press, Richard D and Gao, Qingsong and others},
   journal={Leukemia},
-  year={2018}
+  year={2018},
   doi={doi:10.1038/s41375-018-0193-y},
   url={https://www.nature.com/articles/s41375-018-0193-y}
 }
