--- a/citations.bib
+++ b/citations.bib
@@ -768,3 +768,27 @@
   doi={doi:10.1038/s41375-018-0193-y},
   url={https://www.nature.com/articles/s41375-018-0193-y}
 }
+
+@article{griffith2018prognostic,
+  title={The prognostic effects of somatic mutations in ER-positive breast cancer},
+  author={Griffith, Obi L and Spies, Nicholas C and Anurag, Meenakshi and Griffith, Malachi and Luo, Jingqin and Tu, Dongsheng and Yeo, Belinda and Kunisaki, Jason and Miller, Christopher A and Krysiak, Kilannin and others},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={3476},
+  year={2018},
+  publisher={Nature Publishing Group},
+  doi={doi:10.1038/s41467-018-05914-x},
+  url={https://www.nature.com/articles/s41467-018-05914-x}
+}
+
+@article{petti2018mutation,
+  title={Mutation detection in thousands of acute myeloid leukemia cells using single cell RNA-sequencing},
+  author={Petti, Allegra A and Williams, Stephen R and Miller, Christopher A and Fiddes, Ian T and Srivatsan, Sridhar N and Chen, David Y and Fronick, Catrina C and Fulton, Robert S and Church, Deanna M and Ley, Timothy J},
+  journal={bioRxiv},
+  pages={434746},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory},
+  doi={doi:10.1101/434746},
+  url={https://www.biorxiv.org/content/early/2018/10/17/434746.1}
+}
